--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-maps": "^1.15.6",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "react-native-webview": "^13.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
