--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "18.2.0",
     "react-native": "0.74.2",
     "react-native-maps": "^1.15.6",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
