--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
       android:theme="@style/AppTheme">
       <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyAwjM0OQjavCzXF1Qqz8vC41K-4s-EzHNY"/>
+        android:value="${googleMapApiKey}"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
