--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@react-navigation/native-stack": "^6.9.26",
     "react": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.15.6",
     "react-native-maps-directions": "^1.9.0",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-webview": "^13.10.3"
   },
@@ -41,6 +43,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-native-dotenv": "^3.4.11",
+    "react-native-svg-transformer": "^1.4.0",
     "react-test-renderer": "18.2.0",
     "typescript": "5.0.4"
   },
