--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@lodev09/react-native-true-sheet": "^0.12.0",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-clipboard/clipboard": "^1.14.1",
     "@react-native-community/geolocation": "^3.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
@@ -24,6 +25,7 @@
     "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.10.4",
     "react-native-screens": "^3.31.1",
+    "react-native-storage": "^1.0.1",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-webview": "^13.10.3"
