--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native-stack": "^6.9.26",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
+    "react-hook-form": "^7.52.0",
     "react-native": "0.74.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "^1.15.6",
