--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "@types/uuid": "^10.0.0",
     "lottie-react-native": "^6.7.2",
     "react": "18.2.0",
     "react-hook-form": "^7.52.0",
@@ -36,7 +37,8 @@
     "react-native-storage": "^1.0.1",
     "react-native-svg": "^15.3.0",
     "react-native-vector-icons": "^10.1.0",
-    "react-native-webview": "^13.10.3"
+    "react-native-webview": "^13.10.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
