--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-firebase/storage": "^20.1.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/elements": "^1.3.30",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@types/uuid": "^10.0.0",
