--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.52.0",
     "react-native": "0.74.2",
     "react-native-fast-image": "^8.6.3",
+    "react-native-google-mobile-ads": "^13.6.1",
     "react-native-image-crop-picker": "^0.41.2",
     "react-native-image-viewing": "^0.2.2",
     "react-native-linear-gradient": "^2.8.3",
