--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.2.0",
     "react-hook-form": "^7.52.0",
     "react-native": "0.74.2",
+    "react-native-code-push": "^8.2.2",
     "react-native-fast-image": "^8.6.3",
     "react-native-google-mobile-ads": "^13.6.1",
     "react-native-image-crop-picker": "^0.41.2",
