config: 안드로이드용 빌드 설정

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -96,9 +96,18 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        release{
+            if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')){
+                storeFile file(MYAPP_UPLOAD_STORE_FILE)
+                storePassword MYAPP_UPLOAD_STORE_PASSWORD
+                keyAlias MYAPP_UPLOAD_KEY_ALIAS
+                keyPassword MYAPP_UPLOAD_KEY_PASSWORD
+            }
+        }
     }
     buildTypes {
         debug {
+            applicationIdSuffix ".debug"
             signingConfig signingConfigs.debug
             // Note: CodePush updates should not be tested in Debug mode as they are overriden by the RN packager. However, because CodePush checks for updates in all modes, we must supply a key.
             resValue "string", "CodePushDeploymentKey", '""'
@@ -113,10 +122,15 @@ android {
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
             resValue "string", "CodePushDeploymentKey", '"mdFpAW2u_Uv82lW0GpdR0QRdaKHE5p8EMdfRT"'
+        }
+    }
+    bundle {
+        language {
+            enableSplit = false
         }
     }
 }
