--- a/.github/workflows/cafe24-js-cd.yml
+++ b/.github/workflows/cafe24-js-cd.yml
@@ -10,7 +10,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: "14"
+          node-version: "20.10.0"
+          cache: npm
       - name: Install packages
         run: npm ci
       - name: Login AppCenter
